# cmd

02_echo/: Cargo.toml  mk-outs.sh
02_echo/src/: main.rs
02_echo/tests/: cli.rs
03_cat/: Cargo.toml
03_cat/src/: lib.rs  main.rs
03_cat/tests/: cli.rs
04_head/: Cargo.toml
04_head/src/: lib.rs  main.rs
04_head/tests/: cli.rs
05_wc/: Cargo.toml
05_wc/src/: lib.rs  main.rs
05_wc/tests/: cli.rs
06_uniq/: Cargo.toml
06_uniq/src/: lib.rs  main.rs
06_uniq/tests/: cli.rs
mycos/: Cargo.toml
mycos/src/: cli.rs  lib.rs  main.rs
