[package]
name = "catr"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
anyhow = "1.0.102"
assert_cmd = "2.1.2"
predicate = "0.1.0"
predicates = { version = "3.1.4", features = ["regex"] }
pretty_assertions = "1.4.1"
rand = "0.10.0"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
rand = "0.10.0"
