[package]
name = "mycos"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
md5 = "0.8.0"
mime_guess = "2.0.5"
qcos = { version = "0.1.15", features = ["progress-bar"] }
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
sha1 = "0.10.6"
tencent-qcloud-cos-rs = "0.1.0"
tokio = { version = "1.50.0", features = ["macros"] }
walkdir = "2.5.0"
